# symbolic-range-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: ESSAfier.h  GiNaCGlue.h  SymBoxes.h  SymbolicRangeAnalysis.h
lib/: ESSAfier.cpp  GiNaCGlue.cpp  OverflowInstrumentation.cpp  SymbolicRangeAnalysis.cpp
scripts/: build.sh  filechecker.sh  run_tests.sh  view.sh
tests/: test.c  testSymBoxes.cpp
tests/c/: branches.c  symbolic_range_analysis_fig7.c  transitive_dependences_handling.c
tests/ll/: branches.ll  fig7.ll  symboxes.txt
